# Philae

./: .gitignore  LICENSE  Python_V3.sh  README.md  continum_mech.py  criteria.py  dev.py  dev_criteria.py  dev_props_cubic.py  dev_repartition.py  generate_structure.py  generate_tpms.py  params_smani_Cuboctahedron40.txt  params_smaut_Cuboctahedron40.txt  params_smaut_RhombicDodecahedron40.txt  plot_criteria.py  plot_results.py  pyproject.toml  requirements.txt  setup.py  tools_homogeneisation.py  workflow.py
Umat/: loi_SMANI_props.py  loi_SMAUT_props.py  loi_sma.py  loi_smaac_props.py  loi_smadi_props.py
Umat/data/: path_biaxial_compression.txt  path_biaxial_tension.txt  path_compression.txt  path_compression_cycle.txt  path_shear.txt  path_tencomp.txt  path_tension.txt  path_tension_cycle.txt
Umat/results/: results_biaxial_compression_local-0.txt  results_biaxial_tension_global-0.txt  results_compressio_cycle_local-0.txt  results_compression_global-0.txt  (+5 more)
dev/: dev.py  dev_isosurface.py
philae.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
results_params/: params_smadi_Cuboctahedron40.txt  params_smadi_RhombicCuboctahedron40.txt  params_smadi_RhombicDodecahedron40.txt  params_smani_RhombicCuboctahedron40.txt  params_smani_RhombicDodecahedron40.txt  params_smaut_RhombicCuboctahedron40.txt  params_strain_Cuboctahedron40.txt  params_strain_Cuboctahedron40_save.txt  params_strain_RhombicCuboctahedron40.txt  params_strain_RhombicDodecahedron40 copy.txt
simuEF/: multi_fea_and_process.py  params_sma_init.txt  plot_fea_results.py  tools_fea.py
(+272 files in other folders)
