[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "philae"
version = "0.1.0"
description = "Description de votre projet"
authors = [
    {name = "LeoHabauzit", email = "leo.habauzit@ensam.eu"}
]
requires-python = ">=3.8"
dependencies = [
    # "numpy",
    # "pandas",
]

[project.urls]
Homepage = "https://github.com/LeoHabauzit/Philae"